2010-10-04  Michael Albinus  <michael.albinus@gmx.de>

	Continue reorganization of load dependencies.  (Bug#7156)

	* tramp.el (tramp-handle-file-local-copy-hook)
	(tramp-delete-temp-file-function): Move down.
	(tramp-exists-file-name-handler): Move up.
	(tramp-register-file-name-handlers): Simplify autoload.
	(tramp-handle-write-region-hook, tramp-handle-directory-file-name)
	(tramp-handle-directory-files, tramp-handle-dired-uncache)
	(tramp-handle-file-modes, tramp-handle-file-name-as-directory)
	(tramp-handle-file-name-completion)
	(tramp-handle-file-name-directory)
	(tramp-handle-file-name-nondirectory, tramp-handle-file-regular-p)
	(tramp-handle-file-remote-p, tramp-handle-file-symlink-p)
	(tramp-handle-find-backup-file-name)
	(tramp-handle-insert-file-contents, tramp-handle-load)
	(tramp-handle-substitute-in-file-name)
	(tramp-handle-unhandled-file-name-directory)
	(tramp-mode-string-to-int, tramp-local-host-p)
	(tramp-make-tramp-temp-file): Moved from tramp-sh.el.

	* tramp-gvfs.el (top):
	* tramp-smb.el (top): Do not require 'tramp-sh.

	* tramp-sh.el (all): Move several objects to tramp.el, see there.
	Rename `tramp-handle-*' to `tramp-sh-handle-*'.

	* tramp-vc.el (tramp-vc-user-login-name, tramp-vc-file-owner): Use
	`file-attributes'.

2010-10-02  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-completion-reread-directory-timeout): Fix
	docstring.

	* tramp-cache.el (tramp-cache-inhibit-cache): Remove.
	(tramp-get-file-property): Replace `tramp-cache-inhibit-cache' by
	`remote-file-name-inhibit-cache'.  Check also for an integer
	value.  Add/increase counter when `tramp-verbose' >= 10.
	(tramp-set-file-property): Add/increase counter when
	`tramp-verbose' >= 10.

	* tramp-cmds.el (tramp-cleanup-all-connections)
	(tramp-cleanup-all-buffers): Set tramp-autoload cookie.
	(tramp-bug): Set tramp-autoload cookie.  Report all interned
	tramp-* variables.  Report also `remote-file-name-inhibit-cache'.